add-ons/curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    app: curl
spec:
  containers:
  - image: curlimages/curl
    imagePullPolicy: Always
    name: curl
    command:
    - "sleep"
    - "604800"
  restartPolicy: Always
