add-ons/wireshark.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wireshark
  labels:
    app: wireshark
spec:
  containers:
  - image: linuxserver/wireshark
    imagePullPolicy: Always
    name: wireshark
    command:
    - "sleep"
    - "604800"
    ports:
    - containerPort: 3000
  restartPolicy: Always
