add-ons/virtual-services.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubernetes-dashboard-virtual-service
  namespace: kube-system
spec:
  hosts:
  - dashboard.istio-example.nl
  gateways:
  - gateway
  http:
  - route:
    - destination:
        host: kubernetes-dashboard
        port: 
          number: 8443
    timeout: 5s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-service
  namespace: istio-system
spec:
  hosts:
  - grafana.istio-example.nl
  gateways:
  - gateway
  http:
  - route:
    - destination:
        host: grafana
        port: 
          number: 3000
    timeout: 5s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtual-service
  namespace: istio-system
spec:
  hosts:
  - kiali.istio-example.nl
  gateways:
  - gateway
  http:
  - route:
    - destination:
        host: kiali
        port: 
          number: 20001
    timeout: 5s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-virtual-service
  namespace: istio-system
spec:
  hosts:
  - jaeger.istio-example.nl
  gateways:
  - gateway
  http:
  - route:
    - destination:
        host: jaeger-collector
        port: 
          number: 14268
    timeout: 5s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-virtual-service
  namespace: istio-system
spec:
  hosts:
  - prometheus.istio-example.nl
  gateways:
  - gateway
  http:
  - route:
    - destination:
        host: prometheus
        port: 
          number: 9090
    timeout: 5s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-virtual-service
  namespace: default
spec:
  hosts:
  - tracing.istio-example.nl
  gateways:
  - gateway
  http:
  - route:
    - destination:
        host: tracing
        port: 
          number: 80
    timeout: 5s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zipkin-virtual-service
  namespace: istio-system
spec:
  hosts:
  - zipkin.istio-example.nl
  gateways:
  - gateway
  http:
  - route:
    - destination:
        host: zipkin
        port: 
          number: 9411
    timeout: 5s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wireshark-virtual-service
  namespace: default
spec:
  hosts:
  - wireshark.istio-example.nl
  gateways:
  - gateway
  http:
  - route:
    - destination:
        host: wireshark
        port: 
          number: 3000
    timeout: 5s
